tests/errors/first_stage/operation/invalid_operand/invalid_operand.as
; the operand is illegal (invalid). examples:
mystr: .string "aabc"
prn 0&
cmp mystr[0]a, mystr[2]
